agregado archivo javascript para JSON

--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ legend{
 
 }
 
-input{    
+input, button{    
     height: 40px;    
     width: 300px;
     padding: 5px;
@@ -144,7 +144,7 @@ input{
     font-size: 12px;
 }
 
-#tipo-doc{
+#tipodoc{
     height: 40px;
     background-color: rgb(224, 221, 221);
     font-family: Jost, sans-serif;
@@ -153,7 +153,7 @@ input{
 
 }
 
-#tarjeta-prof{
+#tarjetaprof{
     width: 300px;
 }
 
@@ -182,17 +182,22 @@ input{
     
 }
 
-.botones input{
+.botones button{
     background-color: rgb(96, 94, 184);
     border: none;     
 }
 
-#guardar{
+#cancelar, #registrar{
     color: white;
     font-size: 16px;
    
 
 }
+
+.box-section{
+    margin-top: 1rem;
+}
+
 
 #footer{ 
     height: 15%;
@@ -228,11 +233,12 @@ footer{
 
 
 
-@media screen and (min-width: 768px){
+
+@media screen and (min-width: 930px){
 
     #titulo {
         margin-left: 50px;
-        font-size: 30px;
+        font-size: 20px;
     }
 
     nav {
@@ -293,3 +299,10 @@ footer{
     }
 }
 
+@media screen and (min-width: 1100px){
+
+    #titulo {
+        margin-left: 50px;
+        font-size: 30px;
+    }
+}
